--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -2,4 +2,4 @@ server.port= 8008
 spring.application.name=product-service
 spring.main.allow-bean-definition-overriding = true
 eureka.client.service-url.defaultZone =http://eureka-in:9001/eureka/,http://eureka-in:9002/eureka/,http://eureka-in:9003/eureka/
-message = hello updated
+message = hello updated secondtime
