--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -3,5 +3,5 @@ spring.application.name=product-service
 spring.main.allow-bean-definition-overriding = true
 eureka.client.service-url.defaultZone =http://eureka-in:9001/eureka/,http://eureka-in:9002/eureka/,http://eureka-in:9003/eureka/
 management.endpoints.web.exposure.include = refresh
-message = hello updated secondtime
+message = hello updated thirdtime
 
