--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -2,6 +2,6 @@ server.port= 8008
 spring.application.name=product-service
 spring.main.allow-bean-definition-overriding = true
 eureka.client.service-url.defaultZone =http://eureka-in:9001/eureka/,http://eureka-in:9002/eureka/,http://eureka-in:9003/eureka/
-management.endpoints.web.exposure.include = refresh
+management.endpoints.web.exposure.include = *
 message = hello updated for fourthtime
 
